--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,9 @@
   </head>
   <body>
     <div id='root'>
+      <div align='center'>
       <img src='./images/lab_ocular_black_white.png' />
+      <div>
     </div>
   </body>
 </html>
